# Aegis-Agent

./: .gitignore  AGENTS.md  Agent.md  README.md  install.sh  pyproject.toml
docs/: architecture.md  channels.md  configuration.md  connectors-model.md  connectors.md  examples.md  execution-backends.md  feature-parity.md  getting-started.md  install.md  mcp.md  memory-model.md  memory.md  migration.md  models.md  policies.md  policy-model.md  roadmap.md  scheduler.md  security-model.md  security.md  skill-hub.md  skills-model.md  skills.md  threat-model.md  tools.md  tui-web.md
examples/connectors/: mock-servicenow.json
examples/policies/: default-policy.toml
examples/skills/: project-summary.json
src/aegis/: __init__.py  remote_control.py
src/aegis/agent/: evidence.py  execution_engine.py  orchestrator.py  planner.py  policy_gate.py  state_machine.py  tool_router.py
src/aegis/api/: __init__.py  server.py
src/aegis/approvals/: __init__.py  actions.py  manager.py  models.py
src/aegis/audit/: __init__.py  logger.py  receipts.py
tests/: test_api.py  test_api_resume_persistence.py  test_audit.py  test_channels.py  test_cli.py  test_connectors.py  test_context_firewall.py  test_evaluation_scenarios.py  test_hooks.py  test_installer.py  test_learning_loop.py  test_mcp.py  test_memory.py  test_migrations.py  test_model_auth.py  test_platform_layers.py  test_plugins.py  test_policy_engine.py  test_processes.py  test_prompt_injection.py  test_remote_control.py  test_scheduler.py  test_skills.py  test_task_state.py  test_tui.py  test_web_gui_browser.py
(+93 files in other folders)
